Adding first v3 classes and fixing compilation errors

--- a/pom.xml
+++ b/pom.xml
@@ -56,28 +56,35 @@
       <artifactId>formats-api</artifactId>
       <version>7.3.1</version>
     </dependency>
+
+  <dependency>
+    <groupId>dev.zarr</groupId>
+    <artifactId>jzarr</artifactId>
+    <version>0.4.2</version>
+    <exclusions>
+      <exclusion>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+      </exclusion>
+      <exclusion>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-core</artifactId>
+      </exclusion>
+      <exclusion>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-annotations</artifactId>
+      </exclusion>
+      <exclusion>
+        <groupId>org.apache.httpcomponents</groupId>
+        <artifactId>httpcore</artifactId>
+      </exclusion>
+    </exclusions>
+  </dependency>
+
     <dependency>
       <groupId>dev.zarr</groupId>
-      <artifactId>jzarr</artifactId>
-      <version>0.4.2</version>
-      <exclusions>
-        <exclusion>
-          <groupId>com.fasterxml.jackson.core</groupId>
-          <artifactId>jackson-databind</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>com.fasterxml.jackson.core</groupId>
-          <artifactId>jackson-core</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>com.fasterxml.jackson.core</groupId>
-          <artifactId>jackson-annotations</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.apache.httpcomponents</groupId>
-          <artifactId>httpcore</artifactId>
-        </exclusion>
-      </exclusions>
+      <artifactId>zarr-java</artifactId>
+      <version>0.0.4</version>
     </dependency>
 
     <dependency>
@@ -91,6 +98,24 @@
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
       <version>6.10</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>${junit-jupiter-version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>${junit-jupiter-version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-params</artifactId>
+      <version>${junit-jupiter-version}</version>
       <scope>test</scope>
     </dependency>
 
@@ -128,6 +153,7 @@
   </dependencies>
 
   <properties>
+    <junit-jupiter-version>5.10.2</junit-jupiter-version>
     <project.rootdir>${basedir}/../..</project.rootdir>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
